B-68612 Tech Debt: FDA: replace Collections.singletonList() by List.of() in dist-foreign-ui package.