@@ -67,7 +67,7 @@ public class UdmUsageEditsInBaselineReportControllerTest {
 
     @Test
     public void testGetAllPeriods() {
-        List<Integer> periods = Collections.singletonList(202112);
+        List<Integer> periods = List.of(202112);
         expect(udmUsageService.getPeriods()).andReturn(periods).once();
         replay(udmReportService, udmUsageService);
         assertEquals(periods, controller.getAllPeriods());
